src/components/BlogCard/BlogCard.module.css
.container {
  display: flex;
  flex-direction: column;
  background: #ffffff;
  border: 1px solid #ebedf0;
  border-radius: 8px;
  overflow: hidden;
  max-width: 508px;
  width: 100%;
  min-width: 250px;
  position: relative;
  max-height: 329px;
}
.authorAndDate {
  color: var(--Purple-1, #8064A2);
font-family: Poppins;
font-size: 14px;
font-style: normal;
font-weight: 500;
line-height: 20px; /* 142.857% */
letter-spacing: 0.42px;
text-transform: capitalize;

}
.date {
  color: #939CA3;
;
}
.imgContainer {
  align-self: stretch;
}
.background {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: cover;
  background-position: center;
  filter: blur(10px);
  width: 100%;
  height: 151px;
  object-fit:contain;
}

.coverImage {
  width: 100%;
  height: 156px;
  object-fit: contain;
  position: relative;
  z-index: 1;
}

.content {
  padding: 12px;
  padding-bottom: 14px;
  font-family: 'Poppins';
}

.contentHead {
  display: flex;
}
.contentImageContainer{
  width: 48px;
  height: 48px;
}
.contentImage {
  border-radius: 4px;
  min-width: 48px;
  width: 48px;
  height: 48px;
  object-fit: cover;
}

.contentTitle {
  width: 100%;
  overflow: hidden;
  

  display: flex;
  justify-content: space-around;
}
.tagline {
  color: var(--Grey-Darker, #6D747A);
font-family: Poppins;
font-size: 12px;
font-style: normal;
font-weight: 400;
line-height: 18px; /* 150% */
text-transform: capitalize;
margin-bottom: 10px;
}

.time-and-title{
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.date-time{
  display: flex;
justify-content: center;
align-items: center;
gap: 16px;
color: var(--Grey-Darker, #6D747A);
font-family: 'Poppins';
font-size: 12px;
font-style: normal;
font-weight: 500;
line-height: normal;
}

.date-time section{
  display: flex;
align-items: center;
gap: 8px;
}

.title {
  font-family: 'Poppins';
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: 22px;
  
  display: block;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;

  -webkit-box-orient: vertical;
}
.titleType {
  font-weight: 600;
  font-size: 10px;
  line-height: 14px;
  color: #77933c;
  margin-left: 2px;
  display: flex;
  align-items: center;
  column-gap: 4px;
}

.tagline {
  padding-top: 4px;
  font-family: 'Poppins';
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 18px;
  max-height: 36px;
  display: block;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.bottom {
  margin-top: 10px;
  display: flex;
  align-items: center;
}

.location {
  font-weight: 500;
  font-size: 12px;
  line-height: 10px;
  color: #6d747a;
  margin-left: 10px;
  white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.hobby {
  display: inline-block;
  background: #f7f5f9;
  border-radius: 24px;
  padding: 4px 4px;
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  color: #8064a2;
  margin-right: 8px;
}

.unpublished-mark{
  display: inline-flex;
  height: 26px;
  padding: 4px 10px;
  align-items: center;
  gap: 10px;
  flex-shrink: 0;
  border: 2px solid var(--mandatory, #C0504D);
  background: rgba(255, 255, 255, 0.70);
  color: var(--mandatory, #C0504D);
  font-family: 'Poppins';
  font-size: 12px;
  font-style: normal;
  font-weight: 600;
  line-height: 18px; /* 150% */
  text-transform: capitalize;
  position: absolute;
  top: 14px;
  left: 12px;
  z-index: 2;
}

.published-mark{
  display: inline-flex;
height: 26px;
padding: 4px 10px;
align-items: center;
gap: 10px;
flex-shrink: 0;
  border: 2px solid #177B1B;
background: rgba(255, 255, 255, 0.70);
color: #177B1B;
font-family: 'Poppins';
font-size: 12px;
font-style: normal;
font-weight: 600;
line-height: 18px; /* 150% */
text-transform: capitalize;
position: absolute;
top: 14px;
left: 12px;
z-index: 2;
}

@media screen and (max-width: 1100px) {
  .container{
    min-width: auto;
  }
  .imgContainer {
    width: 100%;
    max-width: 508px;
    position: relative;
    overflow: hidden;
  }
  .container { 
    max-height: none;
  }
  .background {
    height: 100%;
  }
  

  .coverImage {
    width: 100%;
    height: auto;
    aspect-ratio:  1016 / 508;
  }
 
}

.purpleText{
  color: #8064a2 !important;
}

.greenText{
  color: #77933c !important;
}

.blueText{
  color: #0096c8 !important;
}

